--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,71 @@
-# macOS system files
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.env
+.venv
+env.bak/
+venv.bak/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
-.AppleDouble
-.LSOverride
-Icon
-._*
+.vs/
 
 # Project specific
-*.csv
+output/           # Simulation output directory
+*.csv            # Data files
+*.xlsx           # Excel files
+*.png            # Plot images
+*.jpg
+*.jpeg
+*.pdf
 *.log
-output/
-results/ 
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg 
