--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ __pycache__/
 .env
 .venv
 
-
 # IDE specific files
 .idea/
 .vscode/
@@ -15,6 +14,9 @@ __pycache__/
 .vs/
 
 # Project specific directories
-**/data/            
-**/output/           
- 
+data/
+output/
+
+# Specific output files (these are redundant if output/ is ignored)
+**/outputseir_curve.png 
+
